Utworzono za pomocą Colaboratory

--- a/Analiza.ipynb
+++ b/Analiza.ipynb
@@ -6,7 +6,7 @@
       "name": "Analiza.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPq8goCF8w5BQG8+V0IUzlj",
+      "authorship_tag": "ABX9TyPIBj0e1/C2msmmVGtqI3vS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,13 +32,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8289cb86-8c14-4055-b8af-8cd5d58783e2"
+        "outputId": "1182a37d-20e3-4710-8376-d1cfff2afa0a"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,17 +61,17 @@
         "with open('/content/drive/MyDrive/Y_OP/VID_20201110_170806-yolo.json') as json_file:\n",
         "  data = json.load(json_file)"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ch5yKFiqfeCR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a174ae7a-fe15-42f2-b38d-c65aa445bc98"
+        "id": "mALa3nBICUha",
+        "outputId": "15fb6429-a0d7-4a54-c5b1-63e54f0ae563"
       },
       "source": [
         "import pandas as pd\n",
@@ -83,39 +83,28 @@
         "\n",
         "df = pd.DataFrame(df_rows, columns=[\"frame\", \"object\", \"proba\", \"x1\", \"y1\", \"x2\", \"y2\"])\n",
         "print(df)\n",
-        "#print(df)\n",
         "\n",
         "all_frames = df[\"frame\"].max() # ilość wszystkich klatek\n",
         "print(all_frames)\n",
         "all= df['object'].value_counts()\n",
-        "print(all)\n",
+        "print(all) # drukuje wszystkie\n",
         "\n",
         "# stworzenie dataframe z rim, gdzie jest ponad 90 % \n",
-        "a=['rim']\n",
-        "rim = df[df['object'].isin(a)]\n",
-        "rim\n",
-        "gproba_rim = rim[rim['proba']>90]\n",
-        " # stworzenie dataframe z ball, gdzie jest ponad 75 % \n",
-        "b=['ball']\n",
-        "ball = df[df['object'].isin(b)]\n",
-        "ball\n",
-        "gproba_ball = ball[ball['proba']> 60]\n",
-        "gproba_ball \n",
+        "rim = df[(df['object']) == 'rim']\n",
+        "gproba_rim = rim[rim['proba'] > 90]\n",
+        " # stworzenie dataframe z ball, gdzie jest ponad 60 % \n",
+        "ball = df[(df['object']) == 'ball']\n",
+        "gproba_ball = ball[ball['proba'] > 60]\n",
         "# stworzenie dataframe z people, gdzie jest ponad 80 % \n",
-        "c=['people']\n",
-        "people = df[df['object'].isin(c)]\n",
-        "people\n",
-        "gproba_pp= people[people['proba']> 80]\n",
-        "gproba_pp\n",
+        "people = df[(df['object']) =='people']\n",
+        "gproba_pp= people[people['proba'] > 80]\n",
         "# połączenie trzech dataframe w jedno\n",
         "df=pd.concat([gproba_pp, gproba_ball,gproba_rim])\n",
-        "df # dobra wersja dataframe\n",
-        "\n",
         "\n",
         "all_good = df['object'].value_counts()\n",
-        "print(all_good) # to tylko dla sprawdzenia"
+        "print(all_good) # drukuje prawidłowe"
       ],
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,41 +144,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a99b7575-64a6-4258-9f36-2a454ae638e2"
+        "outputId": "75e211ae-3e0d-4135-e9d3-b0e9524e9e8a"
       },
       "source": [
         "# sprawdzanie ile klatek jest poprawnych (3 elementy)\n",
         "count_frames = df[\"frame\"].max()\n",
-        "n=0\n",
-        "is_good=0 # zmienna przechwująca dobre klatki\n",
+        "n = 0\n",
+        "is_good = 0 # zmienna przechwująca dobre klatki\n",
         "bad_frames = [] # lista przechowująca złe klatki (potrzebne do openpose)\n",
-        "good_frames = []\n",
-        "while n < count_frames:\n",
-        "  number = [n]  \n",
-        "  one_frame= df[df['frame'].isin(number)]\n",
-        "\n",
+        "good_frames = [] # lista przechowująca dobre klatki\n",
+        "while n < count_frames: \n",
+        "  one_frame = df[(df['frame']) == n]\n",
         "  x = one_frame['object'].count() # zliczanie ile mamy obiektów w  danej klatce\n",
-        "\n",
         "  if \"rim\" in one_frame.values and \"people\" in one_frame.values and 'ball' in one_frame.values and x == 3:\n",
         "    print(\"Klatka\",n,\"jest git\")\n",
-        "    is_good = is_good + 1\n",
+        "    is_good += 1\n",
         "    good_frames.append(n)\n",
         "  else:\n",
         "    print(\"Klatka\",n,\"nie jest git\")\n",
         "    df = df[df.frame != n]\n",
         "    bad_frames.append(n)\n",
-        "  n = n+1\n",
+        "  n += 1\n",
         "print(\"Dobrych klatek:\", is_good)\n",
         "ratio = is_good/count_frames  # jaki współczynnik klatek jest git\n",
         "print(\"wspolczynnik dobrych:\", ratio)\n",
         "if ratio > 0.5 :\n",
         "  print(\"Spoko film mordo\")\n",
         "else:\n",
-        "  print(\"Daj inny film byczku\")\n",
-        "\n",
-        "print(df)"
+        "  print(\"Daj inny film byczku\")"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,21 +279,7 @@
             "Klatka 98 nie jest git\n",
             "Dobrych klatek: 22\n",
             "wspolczynnik dobrych: 0.2222222222222222\n",
-            "Daj inny film byczku\n",
-            "     frame  object      proba    x1   y1    x2   y2\n",
-            "80      44  people  96.878982   188  551   459  917\n",
-            "83      45  people  98.003882   190  542   458  922\n",
-            "92      49  people  97.433764   201  470   449  969\n",
-            "95      50  people  91.025913   200  472   455  962\n",
-            "113     56  people  81.525344   203  496   450  940\n",
-            "..     ...     ...        ...   ...  ...   ...  ...\n",
-            "210     90     rim  99.762791  1342  238  1476  346\n",
-            "213     91     rim  99.746567  1342  237  1477  347\n",
-            "221     94     rim  99.688083  1343  235  1479  348\n",
-            "228     96     rim  99.698037  1343  234  1481  348\n",
-            "234     99     rim  99.758506  1340  236  1487  346\n",
-            "\n",
-            "[68 rows x 7 columns]\n"
+            "Daj inny film byczku\n"
           ],
           "name": "stdout"
         }
@@ -322,40 +292,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4d226790-889b-4914-9de4-2ff54e69ed50"
+        "outputId": "ffa261f2-2ad8-4a00-c7e7-99bdfb43965a"
       },
       "source": [
         "# i teraz trzeba sprawdzić na ilu klatkach widać przechodzącą pilke przez obrecz (trafiony)\n",
         "for n in good_frames:\n",
-        "  number = [n]  \n",
-        "  one_frame= df[df['frame'].isin(number)]\n",
-        "\n",
-        "# środek Piłki = ((x1 + x2)/2),(y1 + y2)/2))\n",
-        "\n",
-        "  ball_cords = one_frame[one_frame['object'].isin(['ball'])]\n",
+        "  one_frame= df[(df['frame']) == n]\n",
+        "# wyciągamy koordynaty piłki\n",
+        "  ball_cords = one_frame[(one_frame['object']) == 'ball']\n",
         "  b_x1 = ball_cords['x1'].item()\n",
         "  b_x2 = ball_cords['x2'].item()\n",
         "  b_y1 = ball_cords['y1'].item()\n",
         "  b_y2 = ball_cords['y2'].item()\n",
-        "\n",
+        "# wyliczamy środek piłki\n",
         "  b_x = (b_x1 + b_x2)/2\n",
         "  b_y = (b_y1 + b_y2)/2\n",
-        "\n",
-        "\n",
-        "  rim_cords = one_frame[one_frame['object'].isin(['rim'])]\n",
+        "# wyciągamy koordynaty ramki\n",
+        "  rim_cords = one_frame[(one_frame['object']) == 'rim']\n",
         "  r_x1 = rim_cords['x1'].item()\n",
         "  r_x2 = rim_cords['x2'].item()\n",
         "  r_y1 = rim_cords['y1'].item()\n",
         "  r_y2 = rim_cords['y2'].item()\n",
-        "\n",
+        "# sprawdzamy czy środek piłki przeszedł przez ramkę\n",
         "  if b_x1 == r_x1 and b_x2 == r_x2 and b_y1 == r_y1 and b_y2 == r_y2:\n",
         "    df = df[df.frame != n]\n",
         "  elif r_x1 < b_x and r_x2 > b_x and r_y1 < b_y and r_y2 > b_y:\n",
         "    print(n, \"TRAFIONE!\")\n",
         "  else:\n",
-        "    print(n, \"nie trafione :(\")\n"
+        "    print(n, \"nie trafione :(\")"
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,11 +360,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2c88b273-d803-4903-e304-ba7886b5034c"
+        "outputId": "7b16e990-b816-4c9d-fcd2-32c059f83636"
       },
       "source": [
         "#pobranie dataframe openpose\n",
-        "\n",
         "with open('/content/drive/MyDrive/Y_OP/VID_20201110_170806-openpose.json') as json_file:\n",
         "  data_op = json.load(json_file)\n",
         "\n",
@@ -440,7 +405,7 @@
         "\n",
         "print(df_op)"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,21 +436,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U1fbI8jJa6YU",
-        "outputId": "48280fe6-1534-4a83-d372-c7399670ad0b"
+        "outputId": "ccfea8a5-de45-4b40-a3d6-a2f15630d5ad"
       },
       "source": [
         "# Sprawdzamy czy człowiek jest w człowieku xd\n",
         "one_frame_yolo = df[(df['frame'].isin(good_frames)) & (df['object'] == 'people')]\n",
         "one_frame_op = df_op[(df_op['frame'].isin(good_frames)) & (df_op['part'] == 8)]\n",
-        "\n",
         "# merge obu dataframe\n",
         "person_check = pd.merge(one_frame_yolo, one_frame_op, how='inner', on='frame')\n",
-        "\n",
+        "# sprawdzamy czy środek człowieka z OpenPose znajduje się wewnątrz ramki People z Yolo\n",
         "def person_condition(x1, x2, x, y1, y2, y):\n",
         "  if x1 < x and x2 > x and y1 < y and y2 > y:\n",
         "    return True\n",
         "  return False\n",
-        "\n",
+        "  \n",
         "person_check['good'] = [person_condition(*row) for row in zip(person_check['x1'], person_check['x2'], person_check['x'], person_check['y1'], person_check['y2'], person_check['y'])]\n",
         "person_ratio = person_check['good'].value_counts().loc[True] / person_check.shape[0]\n",
         "\n",
@@ -494,12 +458,11 @@
         "else:\n",
         "  print(\"Dej nowy\", person_ratio)"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1.0\n",
             "W pyte film 1.0\n"
           ],
           "name": "stdout"
